--- a/GOTApp/Views/GOTHomePage.html
+++ b/GOTApp/Views/GOTHomePage.html
@@ -15,6 +15,7 @@
     <script src="../scripts/Lib/angular.min.js"></script>
     <script src="../scripts/Lib/angular-route.min.js"></script>
     <script src="../scripts/Lib/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.min.js"></script>
     <script src="../scripts/Helpers/configurationHelper.js"></script>
     <script src="../scripts/Helpers/ServiceHelper.js"></script>
     <script src="../scripts/GOTctrls/ctrlGotApp.js"></script>
