factory changes and api calling changes_initial

--- a/GOTApp/Views/GOTHomePage.html
+++ b/GOTApp/Views/GOTHomePage.html
@@ -7,17 +7,16 @@
 </head>
 <body data-ng-app="gotApp" data-ng-controller="ctrlGotApp">
 
-    <div ng-repeat="obj in Characters">
-        <p>{{obj.Name}}</p>
-    </div>
-    
     <script src="../scripts/Lib/jquery-2.2.3.min.js"></script>
     <script src="../scripts/Lib/angular.min.js"></script>
     <script src="../scripts/Lib/angular-route.min.js"></script>
     <script src="../scripts/Lib/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.min.js"></script>
-    <script src="../scripts/Helpers/configurationHelper.js"></script>
-    <script src="../scripts/Helpers/ServiceHelper.js"></script>
-    <script src="../scripts/GOTctrls/ctrlGotApp.js"></script>
+    <script>
+        var app = angular.module("gotApp", []);
+    </script>
+    <script src="../scripts/ReferenceFile.js"></script>
+
+    
 </body>
 </html>
